--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang=”pt-br”>
+<meta charset=”UTF-8”
+><html>
 	<head>
+
 		<title>Guia para instalação do ITK/VTK</title>
 	</head>
 	
